--- a/css/main.css
+++ b/css/main.css
@@ -3,12 +3,18 @@ body {
 	max-width: 800px;
 	margin-top: 32px;
 	padding: 16px;
+	font-family: Open Sans,Arial;
+	text-align: justify;
+	color: #454545;
+	font-size: 16px;
+	line-height: 1.4;
 }
 
 
 #wrong {
 	color: #c0392b; 
 	text-decoration: underline;
+	font-weight: 600;
 }
 
 .red {
@@ -33,4 +39,59 @@ body {
 
 .logo {
 	height: 15px; 
+}
+
+#fuck {
+	font-family: monospace;
+	font-size: 18px;
+}
+
+.nbr {
+	color: #444;
+    font-weight: 700;
+}
+
+.left, .right {
+	float: left;
+}
+
+.left {
+	width: 40%;
+	margin-right: 15px;
+}
+
+.right {
+	width: 50%;
+
+}
+
+#cat {
+	width: 100%;
+}
+
+#taille {
+	display: inline-block;
+}
+
+#auteur {
+	font-size: 10px;
+}
+
+#cit {
+	vertical-align: top;
+	font-size: 12px;
+}
+
+#kop {
+	height: 30px;
+	margin: auto;
+	display: block;
+}
+
+#kopi {
+	display: block;
+}
+
+#caty {
+	font-size: 10px;
 }
